// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: OpenCloseModal ui custom button texts: Component: OpenCloseModal => ui => custom button texts 1`] = `
<Modal
  footer={
    <React.Fragment>
      <Button
        className="ml-1"
        color="secondary"
        icon="cancel"
        onClick={[Function]}
      >
        Stop please
      </Button>
      <Button
        className="ml-1"
        color="primary"
        icon="save"
        onClick={[Function]}
      >
        Select me
      </Button>
    </React.Fragment>
  }
  header="Choose something"
  onClose={[MockFunction]}
  stickyFooter={true}
>
  <RadioGroup
    labelForOption={[Function]}
    onChange={[MockFunction]}
    options={
      Array [
        "local",
        "development",
        "test",
        "acceptation",
        "production",
      ]
    }
  />
</Modal>
`;

exports[`Component: OpenCloseModal ui in progress: Component: OpenCloseModal => ui => in progress 1`] = `
<Modal
  footer={
    <React.Fragment>
      <Button
        className="ml-1"
        color="secondary"
        icon="cancel"
        onClick={[Function]}
      >
        Cancel
      </Button>
      <Button
        className="ml-1"
        color="primary"
        icon="save"
        inProgress={true}
        onClick={[Function]}
      >
        Save
      </Button>
    </React.Fragment>
  }
  header="Choose something"
  onClose={[MockFunction]}
  stickyFooter={true}
>
  <RadioGroup
    labelForOption={[Function]}
    onChange={[MockFunction]}
    options={
      Array [
        "local",
        "development",
        "test",
        "acceptation",
        "production",
      ]
    }
  />
</Modal>
`;

exports[`Component: OpenCloseModal ui sans sticky footer: Component: OpenCloseModal => ui => sans sticky 1`] = `
<Modal
  footer={
    <React.Fragment>
      <Button
        className="ml-1"
        color="secondary"
        icon="cancel"
        onClick={[Function]}
      >
        Cancel
      </Button>
      <Button
        className="ml-1"
        color="primary"
        icon="save"
        onClick={[Function]}
      >
        Save
      </Button>
    </React.Fragment>
  }
  header="Choose something"
  onClose={[MockFunction]}
  stickyFooter={false}
>
  <RadioGroup
    labelForOption={[Function]}
    onChange={[MockFunction]}
    options={
      Array [
        "local",
        "development",
        "test",
        "acceptation",
        "production",
      ]
    }
  />
</Modal>
`;

exports[`Component: OpenCloseModal ui with label: Component: OpenCloseModal => ui => with label 1`] = `
<Modal
  footer={
    <React.Fragment>
      <Button
        className="ml-1"
        color="secondary"
        icon="cancel"
        onClick={[Function]}
      >
        Cancel
      </Button>
      <Button
        className="ml-1"
        color="primary"
        icon="save"
        onClick={[Function]}
      >
        Save
      </Button>
    </React.Fragment>
  }
  header="Choose something"
  onClose={[MockFunction]}
  stickyFooter={true}
>
  <RadioGroup
    labelForOption={[Function]}
    onChange={[MockFunction]}
    options={
      Array [
        "local",
        "development",
        "test",
        "acceptation",
        "production",
      ]
    }
  />
</Modal>
`;

exports[`Component: OpenCloseModal ui without buttons: Component: OpenCloseModal => ui => without buttons 1`] = `
<Modal
  header="Choose something"
  onClose={[MockFunction]}
  stickyFooter={true}
>
  <RadioGroup
    labelForOption={[Function]}
    onChange={[MockFunction]}
    options={
      Array [
        "local",
        "development",
        "test",
        "acceptation",
        "production",
      ]
    }
  />
</Modal>
`;

exports[`Component: OpenCloseModal ui without label: Component: OpenCloseModal => ui => without label 1`] = `
<Modal
  footer={
    <React.Fragment>
      <Button
        className="ml-1"
        color="secondary"
        icon="cancel"
        onClick={[Function]}
      >
        Cancel
      </Button>
      <Button
        className="ml-1"
        color="primary"
        icon="save"
        onClick={[Function]}
      >
        Save
      </Button>
    </React.Fragment>
  }
  onClose={[MockFunction]}
  stickyFooter={true}
>
  <RadioGroup
    labelForOption={[Function]}
    onChange={[MockFunction]}
    options={
      Array [
        "local",
        "development",
        "test",
        "acceptation",
        "production",
      ]
    }
  />
</Modal>
`;
